--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Me</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -23,8 +24,28 @@
                 </div>
             </nav>
         </header>
-        <section class="container">
-            <h2>still under construction...</h2>
+        <section class="contact-container">
+            <div class="contact-header">
+                <h1>Contact Me</h1>
+                <p>Fill out the form below, and I'll get in touch as soon as possible.</p>
+            </div>
+            <div class="contact-form">
+                <form action="#" method="post">
+                    <div class="form-group">
+                        <label for="name">Your Name</label>
+                        <input type="text" id="name" name="name" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="email">Your Email</label>
+                        <input type="email" id="email" name="email" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="message">Message</label>
+                        <textarea id="message" name="message" rows="4" required></textarea>
+                    </div>
+                    <button type="submit" class="submit-btn">Send Message</button>
+                </form>
+            </div>
         </section>
         <footer>
             <div>
@@ -43,8 +64,8 @@
                     <a href="https://twitter.com/kachi_okwuolisa"><i class="fa-brands fa-twitter"></i></a>
                 </div>
             </div>
-            <div>
-                <h4>2025 by Kachi</h4>
+            <div class="copyright-container">
+                <h4> &copy;2025 by Kachi</h4>
                 <span>with Love ❤️.</span>
             </div>
         </footer>
