added copyright symbol in index.html footer

--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
                     <a href="https://twitter.com/kachi_okwuolisa"><i class="fa-brands fa-twitter"></i></a>
                 </div>
             </div>
-            <div>
-                <h4>2025 by Kachi</h4>
+            <div class="copyright-container">
+                <h4> &copy;2025 by Kachi</h4>
                 <span>with Love ❤️.</span>
             </div>
         </footer>
